projeto responsivo 768px

--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -115,7 +115,7 @@
 
  .maravilhosa__titulo{
     color: #ea4c89;
-    font-size: 40px;
+    font-size: 35px;
     text-align: center;
     font-weight: bold;
     padding-top: 40px;
@@ -141,7 +141,7 @@
  }
 
  .suaHistoria__imagem{
-    width: 90%;
+    width: 70%;
     margin-bottom: 30px;
     margin-top: 30px;
  }
@@ -161,14 +161,91 @@
   
   /* AUTORA */
   
-  
-  
-  /* SECAO Recado */
-  
+  .autora{
+      background-color: #b6dbf1d2;
+      align-items: center;
+      width: 100%;
+      height: 600px;
+      margin-top: 60px;
+      padding: 20px;
+  }
+
+  .autora__titulo{
+      text-align: center;
+      color: #ea4c89;
+      font-size: 32px;
+      font-weight: bold;
+      letter-spacing: 1px;
+      padding: 30px;
+    }
+
+    .autora__sobre{
+        display: flex;
+    }
+
+    .autora__imagem{
+        width: 50%;
+        border-radius: 50%;
+        margin-right: 5px;
+    }
   
   
   /* FOOTER */
-  
+    .footer {
+        background: #ea4c89;
+        color: #f3f3f3;
+    }
+
+    .footer__menu{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+        margin: 10px 60px;
+        font-size: 1.4rem;
+        padding: 30px;
+    }
+    
+    .footer__links {
+        display: block;
+        text-align: center;
+        list-style: none;
+    }
+    
+    
+    .footer__cc {
+        background: #5B5E5E;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
+    
   
   /* MEDIA QUERY */
+
+
+    @media (min-width: 768px){
+      .container_header{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+      }
+
+      .header_maravilhosa_img{
+        width: 90%;
+        height: 350px;
+        margin-left: 10px;
+        margin-bottom: 175px;
+    }
+
+    .autora__imagem{
+        width: 20%;
+    }
+
+    .autora__sobre{
+        align-items: center;
+    }
+
+  }
   
