--- a/Maravilhosa/style.css
+++ b/Maravilhosa/style.css
@@ -64,6 +64,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-transform: uppercase;
   }
   
   
@@ -181,6 +182,7 @@
 
     .autora__sobre{
         display: flex;
+        height: 200px;
     }
 
     .autora__imagem{
@@ -201,9 +203,8 @@
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-around;
-        margin: 10px 60px;
         font-size: 1.4rem;
-        padding: 30px;
+        
     }
     
     .footer__links {
@@ -215,10 +216,16 @@
     
     .footer__cc {
         background: #5B5E5E;
+        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: 20px;
+        padding: 10px;
+    }
+
+    .footer__cc p{
+        font-size: 16px;
+        align-items: center;
     }
     
   
@@ -229,23 +236,67 @@
       .container_header{
           display: flex;
           flex-direction: row;
+          justify-content: space-around;
           align-items: center;
-      }
+        }
 
-      .header_maravilhosa_img{
-        width: 90%;
-        height: 350px;
-        margin-left: 10px;
-        margin-bottom: 175px;
+        .header_maravilhosa_img{
+            width: 100%;
+            height: 360px;
+            margin-left: 10px;
+            margin-bottom: 175px;
+            margin-left: 8px;
+        }
+
+        .header__titulo{
+            width: 30%;
+            margin: 45px 0px 10px 70px;
+            font-size: 20px;
+        }
+
+        .autora__imagem{
+            width: 20%;
+        }
+
+        .autora__sobre{
+            align-items: center;
+            height: 200px;
+        }
+
+        .suaHistoria__imagem{
+            width: 50%;
+        }
+
+        .container__suaHistoria{
+            flex-direction: row;
+            justify-content: space-around;
+            
+        }
+
     }
 
-    .autora__imagem{
-        width: 20%;
+    @media (min-width: 1280px){
+        .header_titulo {
+            font-size: 20px;
+            margin-bottom: 80px;
+        }
+
+        .header_button{
+            font-size: 20px;
+        }
+
+        .boxBorder__texto{
+            font-size: 23px;
+        }
+
+        .suaHistoria__texto{
+            font-size: 23px;
+        }
+
+        .autora__sobre{
+            font-size: 23px;
+        }
     }
 
-    .autora__sobre{
-        align-items: center;
-    }
 
-  }
   
